[package]
name = "bolos-derive"
version = "0.1.0"
authors = ["Zondax <hello@zondax.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1"
proc-macro-error = { version = "1" }

convert_case = "0.6"

[dev-dependencies]
bolos = { path = "../bolos" }
