[package]
name = "bolos-mock"
version = "0.1.0"
authors = ["Zondax <hello@zondax.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
bolos-common = { version = "0.1", path = "../bolos-common", features = ["std"] }

#force-soft is used so it's compatible with MIRI
#AFAIK there's no way to enable this feature dyanmically when compiled under miri
sha2 = { version = "0.9.8", features = ["force-soft"] }
blake2 = "0.9.2"
ripemd = "0.1.1"

hmac = "0.11.0"

cfg-if = "1.0.0"

ed25519-dalek = "1.0.1"
k256 = "0.9.6"
p256 = "0.9.0"

rand7 = { version = "0.7", package = "rand" }
rand_chacha7 = { version = "0.2.2", package = "rand_chacha" }
rand8 = { version = "0.8.4", package = "rand" }
rand_chacha8 = { version = "0.3.1", package = "rand_chacha" }

[dev-dependencies]
bolos = { version = "0.1", path = "../bolos" }
