[package]
name = "bolos-sys"
version = "0.1.0"
authors = ["Zondax <hello@zondax.ch>"]
edition = "2018"

[dependencies]
cfg-if = "1.0.0"

# Required for the global allocator
critical-section = { version = "1.1.2" }

# Required for LLHeap
linked_list_allocator = { version = "0.10.5", default-features = false }
rlsf = { version = "0.2.1", default-features = false, optional = true }
const-default = { version = "1.0.0", default-features = false, optional = true }

zeroize = { version = "1", default-features = false }

[dev-dependencies]
bolos = { version = "0.1", path = "../bolos" }

[build-dependencies]
bindgen = { version = "0.66" }
