[package]
name = "bolos"
version = "0.1.0"
authors = ["Zondax <hello@zondax.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
derive-debug = []

[dependencies]
cfg-if = "1.0.0"
bolos-derive = { version = "0.1", path = "../bolos-derive" }

no-std-compat = { version = "0.4" }

#wear levelling
crc = { version = "1.8.1", default-features = false }
zeroize = { version = "1.4", default-features = false }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
bolos-impl = { version = "0.1", path = "../bolos-impl" }

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dependencies]
bolos-mock = { version = "0.1", path = "../bolos-mock" }
